--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "picasso",
   "version": "0.1.0",
+  "homepage": "/posts",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
